# liblogger

./: README.md  meson.build
include/liblogger/: .channel_ostream.hh.swp  channel.hh  channel_ajax.hh  channel_ostream.hh  logger.hh  logger_channeled.hh  logger_multichannel.hh  severity.hh
src/: main.cc
src/liblogger/: channel.cc  channel_ajax.cc  channel_ostream.cc  logger.cc  logger_channeled.cc  logger_multichannel.cc  severity.cc
subprojects/: libajax.wrap
